Adjust Modal positioning to prevent content shift when height changes

--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -41,9 +41,9 @@
     max-width: 640px;
     overflow: hidden;
     text-align: left;
-    vertical-align: middle;
     background: $color-base-white;
     padding: $spacing-4;
+    margin-top: 25vh;
 }
 
 .backdropTransition {
